--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.3.0</version>   <!-- latest GA as of Apr-2025 -->
+            <scope>runtime</scope>     <!-- bundled in WAR, not needed at compile unit tests -->
+        </dependency>
     </dependencies>
 
     <build>
